<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="538dp"
        android:layout_height="1041dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="17dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/btn_member"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="208dp"
        android:contentDescription="redwood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/red_wood"
        tools:srcCompat="@drawable/red_wood" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="208dp"
        android:contentDescription="redwood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/red_wood"
        tools:srcCompat="@drawable/red_wood" />

    <TextView
        android:id="@+id/btn_text_menu"
        android:layout_width="144dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_btn_menu"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:typeface="serif"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/btn_menu"
        app:layout_constraintEnd_toEndOf="@+id/btn_menu" />

    <TextView
        android:id="@+id/btn_text_members"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_btn_member"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:typeface="serif"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/btn_member"
        app:layout_constraintStart_toStartOf="@+id/btn_member" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="343dp"
        android:layout_height="225dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chen_logo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>